--- a/src/components/App.css
+++ b/src/components/App.css
@@ -2,7 +2,7 @@
   background-position: center;
 }
 
-.main-container>* {
+.main-container >* {
   grid-column-start: 1;
   grid-row-start: 1;
 }
@@ -10,9 +10,7 @@
 .main-container-content {
   z-index: 0;
   display: flex;
-  align-items: center;
-  justify-items: center;
-  justify-content: center;
+  place-items: center;
   gap: 1rem;
   padding: 1rem;
 }
